Bug 431335 - Wrong rendering with fill tool when pattern is enabled
Summary: Wrong rendering with fill tool when pattern is enabled
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-08 21:53 UTC by Deif Lou
Modified: 2021-04-12 20:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Deif Lou 2021-01-08 21:53:12 UTC
SUMMARY
When using the fill tool with the pattern option selected, the pattern is rendered too big. If the scale is changed in the tool options slider then the pattern is rendered at the right scale.

STEPS TO REPRODUCE
1. open krita and open/create an image
2. select the fill tool and set "use pattern" option without changing the scale slider
3. use the tool in the canvas

OBSERVED RESULT
The pattern is rendered as if it where extremely big.

EXPECTED RESULT
The pattern should be rendered with the scale set in the scale slider.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:
(available in About System)
KDE Plasma Version: 5.20.4
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.2
Comment 1 sh_zam 2021-04-12 20:01:06 UTC
Git commit 1bcb59e3ec642e37c675e7048df377429380c405 by Sharaf Zaman.
Committed on 12/04/2021 at 19:58.
Pushed by szaman into branch 'master'.

Bugfix: Incorrect patternScale value for fill tool

M  +1    -1    plugins/tools/basictools/kis_tool_fill.cc

https://invent.kde.org/graphics/krita/commit/1bcb59e3ec642e37c675e7048df377429380c405