Bugfix: Incorrect patternScale value for fill tool

BUG:431335